.ser dateien werden jetzt in Resource gespeichert